--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
     <title>Website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel= "stylesheet" href= "main.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+        html, body, h1, h2, h3, h4, h5, h6 {
+            font-family: "Roboto", sans-serif
+        }
     </style>
     <script src="https://kit.fontawesome.com/6cc4bf16a7.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+<div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">Resume</a>
+    <a href="#contact">About</a>
+    <a href="#about">Work History</a>
+    <a href="#about">Hobbies</a>
+</div>
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -30,11 +41,13 @@
                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>IT Professional</p>
                     <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Corpus Christi, TX</p>
                     <!-- Add email link -->
-                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>pjcarroll9500@mail.com</p>
+                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>pjcarroll9500@mail.com
+                    </p>
                     <!-- Add Link to attempt call -->
                     <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>843-437-6951</p>
                 </div>
-            </div><br>
+            </div>
+            <br>
 
         </div>
         <!-- End Left Column -->
@@ -44,54 +57,60 @@
         <div class="w3-twothird">
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
-                <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Texas A&M University-Corpus Christi, Senior</h2>
+                <h2 class="w3-text-grey w3-padding-16"><i
+                        class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Texas A&M
+                    University-Corpus Christi, Senior</h2>
                 <div class="w3-container">
                     <h4 class="w3-opacity"><b>Bachelor of Science, in Computer Science GPA 3.58</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span class="w3-tag w3-blue w3-round">Present</span></h6>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span
+                            class="w3-tag w3-blue w3-round">Present</span></h6>
                 </div>
                 <hr>
             </div>
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
-                <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Certifications</h2>
+                <h2 class="w3-text-grey w3-padding-16"><i
+                        class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Certifications</h2>
                 <div class="w3-container">
                     <h4 class="w3-opacity"><b>CompTIA Security+</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2022 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2022 - <span
+                            class="w3-tag w3-blue w3-round">Current</span></h6>
                 </div>
                 <hr>
 
             </div>
 
             <div class="w3-container w3-card w3-white">
-                <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Work History</h2>
+                <h2 class="w3-text-grey w3-padding-16"><i
+                        class="fa fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Work History</h2>
                 <div class="w3-container">
                     <h4 class="w3-opacity"><b>Navy Reservist Information Systems Technician</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2019 - <span class="w3-tag w3-blue w3-round">Present</span></h6>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2019 - <span
+                            class="w3-tag w3-blue w3-round">Present</span></h6>
                 </div>
                 <hr>
                 <div class="w3-container">
                     <h4 class="w3-opacity"><b>IT Systems Administration Assistant</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2019 - Dec 2021</h6>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2019 - Dec 2021
+                    </h6>
                 </div>
                 <hr>
                 <div class="w3-container">
                     <h4 class="w3-opacity"><b>Cable Technician - 3 Month Contract</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 - Aug 2021</h6>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 - Aug 2021
+                    </h6>
                 </div>
                 <hr>
                 <div class="w3-container">
                     <h4 class="w3-opacity"><b>Navy Active Duty Submarine Radioman</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2014 - Apr 2019</h6>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2014 - Apr 2019
+                    </h6>
                 </div>
                 <hr>
 
 
-
-
-
                 <!-- End Right Column -->
             </div>
-
 
 
             <!-- End Grid -->
@@ -100,10 +119,11 @@
         <!-- End Page Container -->
     </div>
 
-    <footer class="w3-container w3-blue w3-center w3-margin-top">
-        <p>Find me on social media.</p>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
-        <i class="fa fa-github w3-hover-opacity"></i>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-    </footer>
-    </div>
+
+</div>
+<footer class="w3-container w3-blue w3-center w3-margin-top">
+    <p>Find me on social media.</p>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <i class="fa fa-github w3-hover-opacity"></i>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
