--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Website</title>
+    <title>Patrick Carroll</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel= "stylesheet" href= "main.css">
@@ -18,10 +18,10 @@
 
 <div class="topnav">
     <a class="active" href="#home">Home</a>
-    <a href="#news">Resume</a>
-    <a href="#contact">About</a>
-    <a href="#about">Work History</a>
-    <a href="#about">Hobbies</a>
+    <a href="resume.html">Resume</a>
+    <a href="#About">About</a>
+    <a href="#Work">Work History</a>
+    <a href="#Hobbies">Hobbies</a>
 </div>
 
 <!-- Page Container -->
