Added a changing Background

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
         }
     </style>
     <script src="https://kit.fontawesome.com/6cc4bf16a7.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
+
+<canvas id="pattern"></canvas>
+<script src="index.js"></script>
+
+
 
 <div class="topnav">
     <a class="active" href="#home">Home</a>
