Fixed some things

--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
                         class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Texas A&M
                     University-Corpus Christi, Senior</h2>
                 <div class="w3-container">
-                    <h4 class="w3-opacity"><b>Bachelor of Science, in Computer Science GPA 3.58</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span
-                            class="w3-tag w3-blue w3-round">Present</span></h6>
+                    <h4 class="w3-opacity"><b>Bachelor of Science, in Computer Science GPA 3.65</b></h4>
+                    <h5 class="w3-opacity"><b>Focus Systems Programming</b></h5>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - Dec 2023</h6>
                 </div>
                 <hr>
+                
             </div>
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
