--- a/resume.html
+++ b/resume.html
@@ -8,24 +8,28 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        html, body, h1, h2, h3, h4, h5, h6 {
+            font-family: "Roboto", sans-serif;
+        }
+    </style>
 </head>
 <body>
 <div class="topnav">
-    <a href="index.html">About</a>
+    <a href="index.html">Home</a>
     <a class="active" href="#Resume">Resume</a>
     <a href="#About">About</a>
     <a href="#Work">Work History</a>
     <a href="#Hobbies">Hobbies</a>
 </div>
 <style>
-    iframe{
+    iframe {
         display: block;
         height: 100vh;
         width: 100vw;
     }
 </style>
 
-<iframe src="Carroll_Resume.pdf">
-</iframe>
+<iframe src="Carroll_Resume.pdf"></iframe>
 </body>
 </html>
