--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
                 </div>
                 <div class="w3-container">
-                    <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>IT Professional</p>
-                    <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Corpus Christi, TX</p>
+                    <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Computer Scientist / Engineer</p>
+                    <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Beavercreek, OH</p>
                     <!-- Add email link -->
                     <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>pjcarroll9500@mail.com
                     </p>
