Commit the latest changes for the evening.
Minor spelling corrections, added a weather/news tab for future implementation of weather and stock market / news.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="resume.html">Resume</a>
-    <a href="#About">About</a>
+    <a href="#News">Weather/News</a>
     <a href="#Work">Work History</a>
     <a href="#Hobbies">Hobbies</a>
 </div>
@@ -47,7 +47,7 @@
                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Computer Scientist / Engineer</p>
                     <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Beavercreek, OH</p>
                     <!-- Add email link -->
-                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>pjcarroll9500@mail.com
+                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>PatrickCarroll.IT@outlook.com
                     </p>
                     <!-- Add Link to attempt call -->
                     <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>843-437-6951</p>
@@ -91,9 +91,21 @@
                 <h2 class="w3-text-grey w3-padding-16"><i
                         class="fa fa-briefcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Work History</h2>
                 <div class="w3-container">
-                    <h4 class="w3-opacity"><b>Navy Reservist Information Systems Technician</b></h4>
-                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2019 - <span
+                    <h4 class="w3-opacity"><b>Junior Model and Simulation Engineer</b></h4>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2024 - <span
                             class="w3-tag w3-blue w3-round">Present</span></h6>
+                </div>
+                <hr>
+                <div class="w3-container">
+                    <h4 class="w3-opacity"><b>System Software Support Engineer</b></h4>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2024 - Aug 2024
+                            class="w3-tag w3-blue w3-round">Present</span></h6>
+                <hr>
+                </div>
+                <div class="w3-container">
+                    <h4 class="w3-opacity"><b>Navy Reservist Information Systems Technician</b></h4>
+                    <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2019 - Feb 2025
+                    </h6>
                 </div>
                 <hr>
                 <div class="w3-container">
@@ -114,8 +126,6 @@
                     </h6>
                 </div>
                 <hr>
-
-
                 <!-- End Right Column -->
             </div>
 
