--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
 <div class="topnav">
     <a href="index.html">Home</a>
     <a class="active" href="#Resume">Resume</a>
-    <a href="#About">About</a>
+    <a href="#News">WeatherNews</a>
     <a href="#Work">Work History</a>
     <a href="#Hobbies">Hobbies</a>
 </div>
