--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="resume.html">Resume</a>
-    <a href="#News">Weather/News</a>
-    <a href="#Work">Work History</a>
-    <a href="#Hobbies">Hobbies</a>
+    <a href="news.html">Weather/News</a>
 </div>
 
 <!-- Page Container -->
@@ -99,7 +97,7 @@
                 <div class="w3-container">
                     <h4 class="w3-opacity"><b>System Software Support Engineer</b></h4>
                     <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2024 - Aug 2024
-                            class="w3-tag w3-blue w3-round">Present</span></h6>
+                    </h6>
                 <hr>
                 </div>
                 <div class="w3-container">
@@ -140,7 +138,11 @@
 </div>
 <footer class="w3-container w3-blue w3-center w3-margin-top">
     <p>Find me on social media.</p>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <i class="fa fa-github w3-hover-opacity"></i>
+    <a href="https://www.linkedin.com/in/patrick-carroll-9500-it" target="_blank">
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </a>
+    <a href="https://github.com/PCarroll9500" target="_blank">
+        <i class="fa fa-github w3-hover-opacity"></i>
+    </a>
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
