--- a/news.html
+++ b/news.html
@@ -4,30 +4,52 @@
     <title>Patrick Carroll</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel= "stylesheet" href= "main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        html, body, h1, h2, h3, h4, h5, h6 {
+        html, body {
             font-family: "Roboto", sans-serif;
+            background-color: black;
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            color: white;
+        }
+        .topnav a {
+            color: white;
+        }
+        .topnav a.active {
+            background-color: #333;
+        }
+        iframe {
+            display: block;
+            width: 100%;
+            height: 500px;
+            border: none;
+            background-color: black;
+        }
+        footer a {
+            color: #ddd;
         }
     </style>
 </head>
 <body>
-<div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="#Resume">Resume</a>
-    <a class="active" href="#News">WeatherNews</a>
-    <a href="#Work">Work History</a>
-    <a href="#Hobbies">Hobbies</a>
+
+<div class="topnav w3-bar w3-black">
+    <a class="w3-bar-item w3-button" href="index.html">Home</a>
+    <a class="w3-bar-item w3-button" href="resume.html">Resume</a>
+    <a class="w3-bar-item w3-button active" href="#News">Weather/News</a>
 </div>
-<style>
-    iframe {
-        display: block;
-        height: 100vh;
-        width: 100vw;
-    }
-</style>
+
+<!-- Weather Section -->
+    <h2>Beavercreek, OH ASCII Weather (°F)</h2>
+    <iframe src="https://wttr.in/Beavercreek?u"></iframe>
+  
+ 
+
 </body>
 </html>
